--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@use 'themes' as *;
+
+@use '@nebular/theme/styles/globals' as *;
+
+@include nb-install() {
+  @include nb-theme-global();
+};
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
