--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -2,7 +2,7 @@
 
 <button nbButton outline status="danger" (click)="newGame()">Start New Game</button>
 
-<h2 *ngIf="winner">Player {{ winner }} won the game!</h2>
+<h2 *ngIf="winner" [ngStyle]="{'color': winnerColor}">Player {{ winner }} won the game!</h2>
 
 <main>
     <app-square 
