--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,15 +1,38 @@
 main {
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: 200px 200px 200px;
+  grid-template-columns: 150px 150px 150px;
   grid-gap: 0px;
+  justify-content: center;
+  align-content: center;
 }
 
 app-square {
   border: 1px solid gray;
-  height: 200px;
+  height: 150px;
+}
+
+h1,
+button {
+  width: 50%;
+  display: inline-flex;
 }
 
 button,
 h2 {
   margin-bottom: 10px;
+}
+h2 {
+  text-align: center;
+}
+
+@media only screen and (max-width: 450px) {
+  main {
+    margin: 0;
+    width: 100%;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+  }
+  app-square {
+    height: 33.33vw;
+  }
 }
