--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
-@use 'themes' as *;
+@use "themes" as *;
 
-@use '@nebular/theme/styles/globals' as *;
+@use "@nebular/theme/styles/globals" as *;
 
 @include nb-install() {
   @include nb-theme-global();
-};
+}
 *,
 *::before,
 *::after {
